language/tests/error/TypeError03.hashem
bebin main() {
  "4" && 4;  
}  
