language/tests/error/TypeError03.output
Type error at TypeError03.hashem line 2 col 3: operation "&&" not defined for String "4", ANY
